<resources>
    <string name="app_name">USAid Evaluations</string>
    <string name="usaid_fragment_list_no_data">There is currently no available evaluations.</string>
    <string name="usaid_about" >The USAID evaluation policy \"sets ambitious standards for the quality and transparency of evaluation to demonstrate results, generate evidence to inform decisions, promote learning and ensure accountability.\" The Development Experience Clearinghouse (DEC), USAID\'s online document archive, provides access to USAID funded evaluation reports. This mobile app improves access to USAID funded evaluation reports by providing a mobile solution for accessing a subset of DEC documents.</string>
    <string name="usaid_ok_button">OK</string>
    <string name="usaid_cancel_button">Cancel</string>
    <string name="usaid_get_pdf_button">Get PDF</string>
    <string name="usaid_connection_server">Connecting To Server ...</string>
    <string name="usaid_description_title_none">No Defined Title</string>
    <string name="usaid_description_value_none">No Description Available</string>
    <string name="usaid_image">image</string>
    <string name="action_settings">Settings</string>
    <string name="usaid_action_filter_reset">Reset</string>
    <string name="usaid_action_filter_country">Country</string>
    <string name="usaid_action_filter_country_afghanistan">Afghanistan</string>
    <string name="usaid_action_filter_country_albania">Albania</string>
    <string name="usaid_action_filter_country_angola">Angola</string>
    <string name="usaid_action_filter_country_armenia">Armenia</string>
    <string name="usaid_action_filter_country_bangladesh">Bangladesh</string>
    <string name="usaid_action_filter_country_bosnia">Bosnia and Hercegovina</string>
    <string name="usaid_action_filter_country_brazil">Brazil</string>
    <string name="usaid_action_filter_country_burma">Burma</string>
    <string name="usaid_action_filter_country_burundi">Burundi</string>
    <string name="usaid_action_filter_country_cambodia">Cambodia</string>
    <string name="usaid_action_filter_country_chad">Chad</string>
    <string name="usaid_action_filter_country_colombia">Colombia</string>
    <string name="usaid_action_filter_country_dominican_republic">Dominican Republic</string>
    <string name="usaid_action_filter_country_congo">Congo DR</string>
    <string name="usaid_action_filter_country_ecuador">Ecuador</string>
    <string name="usaid_action_filter_country_egypt">Egypt</string>
    <string name="usaid_action_filter_country_el_salvador">El Salvador</string>
    <string name="usaid_action_filter_country_ethiopia">Ethiopia</string>
    <string name="usaid_action_filter_country_gambia">Gambia</string>
    <string name="usaid_action_filter_country_georgia">Georgia</string>
    <string name="usaid_action_filter_country_ghana">Ghana</string>
    <string name="usaid_action_filter_country_guatemala">Guatemala</string>
    <string name="usaid_action_filter_country_haiti">Haiti</string>
    <string name="usaid_action_filter_country_india">India</string>
    <string name="usaid_action_filter_country_indonesia">Indonesia</string>
    <string name="usaid_action_filter_country_iraq">Iraq</string>
    <string name="usaid_action_filter_country_kazakhstan">Kazakhstan</string>
    <string name="usaid_action_filter_country_kenya">Kenya</string>
    <string name="usaid_action_filter_country_kosovo">Kosovo</string>
    <string name="usaid_action_filter_country_kyrgyzstan">Kyrgyzstan</string>
    <string name="usaid_action_filter_country_lebanon">Lebanon</string>
    <string name="usaid_action_filter_country_liberia">Liberia</string>
    <string name="usaid_action_filter_country_libya">Libya</string>
    <string name="usaid_action_filter_country_mali">Mali</string>
    <string name="usaid_action_filter_country_mauritania">Mauritania</string>
    <string name="usaid_action_filter_country_mexico">Mexico</string>
    <string name="usaid_action_filter_country_montenegro">Montenegro</string>
    <string name="usaid_action_filter_country_morocco">Morocco</string>
    <string name="usaid_action_filter_country_mozambique">Mozambique</string>
    <string name="usaid_action_filter_country_nepal">Nepal</string>
    <string name="usaid_action_filter_country_nicaragua">Nicaragua</string>
    <string name="usaid_action_filter_country_niger">Niger</string>
    <string name="usaid_action_filter_country_nigeria">Nigeria</string>
    <string name="usaid_action_filter_country_pakistan">Pakistan</string>
    <string name="usaid_action_filter_country_paraguay">Paraguay</string>
    <string name="usaid_action_filter_country_peru">Peru</string>
    <string name="usaid_action_filter_country_philippines">Philippines</string>
    <string name="usaid_action_filter_country_rwanda">Rwanda</string>
    <string name="usaid_action_filter_country_senegal">Senegal</string>
    <string name="usaid_action_filter_country_serbia">Serbia</string>
    <string name="usaid_action_filter_country_south_africa">South Africa</string>
    <string name="usaid_action_filter_country_south_sudan">South Sudan</string>
    <string name="usaid_action_filter_country_sri_lanka">Sri Lanka</string>
    <string name="usaid_action_filter_country_sudan">Sudan</string>
    <string name="usaid_action_filter_country_tajikistan">Tajikistan</string>
    <string name="usaid_action_filter_country_tanzania">Tanzania</string>
    <string name="usaid_action_filter_country_timor_leste">Timor-Leste</string>
    <string name="usaid_action_filter_country_turkmenistan">Turkmenistan</string>
    <string name="usaid_action_filter_country_uganda">Uganda</string>
    <string name="usaid_action_filter_country_ukraine">Ukraine</string>
    <string name="usaid_action_filter_country_uzbekistan">Uzbekistan</string>
    <string name="usaid_action_filter_country_vietnam">Vietnam</string>
    <string name="usaid_action_filter_country_gaza">WB Gaza</string>
    <string name="usaid_action_filter_country_yemen">Yemen</string>
    <string name="usaid_action_filter_country_zimbabwe">Zimbabwe</string>
    <string name="usaid_json_cache_file">jsonCacheFile</string>
    <string name="usaid_json_cache_file_toast">Using cached data.</string>
    <string name="usaid_action_filter_sector">Sector</string>
    <string name="usaid_action_filter_sector_agriculture">Agriculture</string>
    <string name="usaid_action_filter_sector_crisis">Crisis</string>
    <string name="usaid_action_filter_sector_democracy">Democracy</string>
    <string name="usaid_action_filter_sector_education">Education</string>
    <string name="usaid_action_filter_sector_environment">Environment</string>
    <string name="usaid_action_filter_sector_finance">Finance</string>
    <string name="usaid_action_filter_sector_gender">Gender</string>
    <string name="usaid_action_filter_sector_health">Health</string>
    <string name="usaid_action_filter_sector_technology">Technology</string>
    <string name="usaid_action_filter_sector_water">Water</string>
    <string name="usaid_action_filter_sector_agriculture_agribusiness">Agribusiness</string>
    <string name="usaid_action_filter_sector_agriculture_general">Agriculture (General)</string>
    <string name="usaid_action_filter_sector_agriculture_development">Agricultural development</string>
    <string name="usaid_action_filter_sector_agriculture_cooperatives">Agricultural enterprises and cooperatives</string>
    <string name="usaid_action_filter_sector_agriculture_finance">Agricultural finance</string>
    <string name="usaid_action_filter_sector_agriculture_market">Agricultural markets</string>
    <string name="usaid_action_filter_sector_agriculture_aquaculture">Aquaculture and fisheries</string>
    <string name="usaid_action_filter_sector_agriculture_forestry">Forestry</string>
    <string name="usaid_action_filter_sector_crisis_conflict_prevention">Conflict prevention</string>
    <string name="usaid_action_filter_sector_crisis_disaster_recovery">Disaster recovery</string>
    <string name="usaid_action_filter_sector_democracy_civil_society">Civil society</string>
    <string name="usaid_action_filter_sector_democracy_democratization">Democratization</string>
    <string name="usaid_action_filter_sector_democracy_elections">Elections</string>
    <string name="usaid_action_filter_sector_democracy_governance">Governance</string>
    <string name="usaid_action_filter_sector_democracy_reform">Government reform</string>
    <string name="usaid_action_filter_sector_democracy_human_rights">Human rights and social justice</string>
    <string name="usaid_action_filter_sector_democracy_international_politics">International politics</string>
    <string name="usaid_action_filter_sector_democracy_political_development">Political development</string>
    <string name="usaid_action_filter_sector_democracy_public_land_records">Public land records and registration</string>
    <string name="usaid_action_filter_sector_democracy_rule_of_law">Rule of law</string>
    <string name="usaid_action_filter_sector_democracy_social_problems">Social problems</string>
    <string name="usaid_action_filter_sector_finance_administration">Economic administration</string>
    <string name="usaid_action_filter_sector_finance_growth">Economic growth and development</string>
    <string name="usaid_action_filter_sector_finance_reform">Economic reform</string>
    <string name="usaid_action_filter_sector_finance_sectors">Economic sectors</string>
    <string name="usaid_action_filter_sector_finance_employment">Employment</string>
    <string name="usaid_action_filter_sector_finance_finance">Finance</string>
    <string name="usaid_action_filter_sector_finance_institutions">Financial institutions</string>
    <string name="usaid_action_filter_sector_finance_health">Health finance</string>
    <string name="usaid_action_filter_sector_finance_capacity_development">Human capacity development</string>
    <string name="usaid_action_filter_sector_finance_trade">International trade</string>
    <string name="usaid_action_filter_sector_finance_resources">Natural resources management</string>
    <string name="usaid_action_filter_sector_finance_public_health_care">Public health care</string>
    <string name="usaid_action_filter_sector_finance_rural_development">Rural areas / rural development</string>
    <string name="usaid_action_filter_sector_finance_small_scale">Small scale enterprises</string>
    <string name="usaid_action_filter_sector_finance_socioeconomic">Socioeconomic development</string>
    <string name="usaid_action_filter_sector_education_access">Access to education</string>
    <string name="usaid_action_filter_sector_education_basic">Basic education</string>
    <string name="usaid_action_filter_sector_education_communications">Communications (General)</string>
    <string name="usaid_action_filter_sector_education_administration">Education administration</string>
    <string name="usaid_action_filter_sector_education_higher">Higher education</string>
    <string name="usaid_action_filter_sector_education_nonformal">Nonformal education</string>
    <string name="usaid_action_filter_sector_environment_ecology">Biological diversity and ecology</string>
    <string name="usaid_action_filter_region">Region</string>
    <string name="usaid_action_filter_region_afganistan">AFGHANISTAN</string>
    <string name="usaid_action_filter_region_pakistan">PAKISTAN</string>
    <string name="usaid_action_filter_region_asia">ASIA</string>
    <string name="usaid_action_filter_region_europe">EUROPE AND EURASIA</string>
    <string name="usaid_action_filter_region_latin_america">LATIN AMERICA AND THE CARIBBEAN</string>
    <string name="usaid_action_filter_region_middle_east">MIDDLE EAST</string>
    <string name="usaid_action_filter_region_africa">SUB SAHARAN AFRICA</string>
    <string name="usaid_action_download_pdf_viewer">Download PDF Viewer</string>
    <string name="usaid_action_about">About</string>
</resources>