<!-- Copyright (c) 2013 Thermopylae Sciences and Technology. All rights reserved. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_filter_reset"
        android:showAsAction="always"
        android:title="@string/usaid_action_filter_reset"/>
    
    <item
        android:id="@+id/action_filter"
        android:showAsAction="never"
        android:title="@string/usaid_action_filter">
        
        <menu >
            <group android:checkableBehavior="all">
            <item
                android:id="@+id/action_filter_sector_agriculture"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_sector_agriculture"/>
            
            <item
                android:id="@+id/action_filter_sector_crisis"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_sector_crisis"/>
            
            <item
                android:id="@+id/action_filter_sector_democracy"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_sector_democracy"/>
            
            <item
                android:id="@+id/action_filter_sector_education"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_sector_education"/>
            
            <item
                android:id="@+id/action_filter_sector_environment"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_sector_environment"/>
            
            <item
                android:id="@+id/action_filter_sector_finance"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_sector_finance"/>
            
            <item
                android:id="@+id/action_filter_sector_gender"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_sector_gender"/>
            
            <item
                android:id="@+id/action_filter_sector_health"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_sector_health"/>
            
            <item
                android:id="@+id/action_filter_sector_technology"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_sector_technology"/>
            
            <item
                android:id="@+id/action_filter_sector_water"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_sector_water"/>
            </group>
        </menu>
        
    </item>
    
    <item
        android:id="@+id/action_region"
        android:showAsAction="never"
        android:title="@string/usaid_action_filter_region">
        
        <menu >
            <group android:checkableBehavior="all">
            <item
                android:id="@+id/action_filter_region_afganistan"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_region_afganistan"/>
            
            <item
                android:id="@+id/action_filter_region_pakistan"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_region_pakistan"/>
            
            <item
                android:id="@+id/action_filter_region_asia"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_region_asia"/>
            
            <item
                android:id="@+id/action_filter_region_europe"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_region_europe"/>
            
            <item
                android:id="@+id/action_filter_region_latin_america"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_region_latin_america"/>
            
            <item
                android:id="@+id/action_filter_region_middle_east"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_region_middle_east"/>
            
            <item
                android:id="@+id/action_filter_region_africa"
                android:showAsAction="never"
                android:title="@string/usaid_action_filter_region_africa"/>
            </group>
        </menu>
        
    </item>
    
    <item
        android:id="@+id/action_download_pdf_viewer"
        android:showAsAction="never"
        android:title="@string/usaid_action_download_pdf_viewer"/>
    
    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/usaid_action_about"/>

</menu>
